[package]
name = "superqueue"
version = "0.1.0"
edition = "2024"
authors = ["alexdesander"]
license = "MIT"
description = "A tiny, type-routed message bus over crossbeam_channel for fast state and event dispatch, designed primarily for game development."
readme = "README.md"
repository = "https://github.com/alexdesander/superqueue"
documentation = "https://docs.rs/superqueue"
keywords = ["message-bus", "channel", "actors", "events", "game-dev"]
categories = ["concurrency", "data-structures", "game-engines"]

[dependencies]
crossbeam-channel = "0.5"
rand = { version = "0.9", default-features = false, features = ["small_rng", "thread_rng"] }
rustc-hash = "2.1"
thiserror = "2.0"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
