[package]
name = "superqueue"
version = "0.1.0"
edition = "2024"
authors = ["alexdesander"]
license = "MIT"
description = "A tiny, lock-light, type-routed message bus providing event streams and latest-value topics (snapshots) for fast state and event dispatch."
readme = "README.md"
repository = "https://github.com/alexdesander/superqueue"
documentation = "https://docs.rs/superqueue"
keywords = ["message-bus", "pubsub", "events", "actors", "game-dev"]
categories = ["concurrency", "data-structures", "game-engines"]

[dependencies]
arc-swap = "1.7"
crossbeam-channel = "0.5"
parking_lot = "0.12"
rand = { version = "0.9", default-features = false, features = ["small_rng", "thread_rng"] }
rustc-hash = "2.1"
thiserror = "2.0"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
